restructure add jwt authentication add clients and users with inital init move coupons under client

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "MongoDB": "mongodb://localhost:27017"
   },
+  "JwtSettings": {
+    "Secret": "1231sdf32s1dfs3f21s32f1s3d21sdf321",
+    "ExpirationInMinutes": 60,
+    "Issuer": "CouponAPI",
+    "Audience": "CouponAPIClients"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
