add redis implementation on kiosk/machine authorize

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MongoDB": "mongodb://localhost:27017"
+    "MongoDB": "mongodb://localhost:27017",
+    "Redis": "localhost:6379"
   },
   "JwtSettings": {
     "Secret": "1231sdf32s1dfs3f21s32f1s3d21sdf321",
